Explored libuv and V8 Engine
- Working of async tasks in NodeJS using libuv
- Working of V8 Engine
- Working of Event Loop and it phases

--- a/NodeJS/Notes/2. v8 and Runtime Environment.md
+++ b/NodeJS/Notes/2. v8 and Runtime Environment.md
@@ -6,7 +6,7 @@ A machine which serves(fulfills) the requests made to it.
 
 Initially  JS was can only be run on web browser but NodeJS enables us to run on `JS` on this machine as well.
 
-> Chrome V8 engine is written in C++ , Thus JS engine is nothing but a  C++ application .V8 can be embedded into any C++ application.
+> Chrome V8 engine is written in C++ , Thus JS engine is nothing but a  C++ application. V8 can be embedded into any C++ application.
 > 
 > Hence
 > 
@@ -17,8 +17,6 @@ Initially  JS was can only be run on web browser but NodeJS enables us to run on
 V8 cannot go beyond executing ECMAScript, but NodeJS gives the v8 to go beyond ECMAScript i.,e features other than just executing JS.
 
 Example: APIs , Database Connection 
-
-
 
 ## Engine VS Run Time Environment
 
@@ -33,8 +31,6 @@ Examples of JavaScript engines include Google's V8 (used in Chrome and Node.js),
 > 
 > JS Engine is not a single compiler but a collection of compilers that work on code at different stages getting the code to the browser.
 
-
-
 ### JavaScript Run Time
 
 The JavaScript runtime environment is a broader concept that encompasses the JavaScript engine along with additional components and APIs necessary for *JavaScript code to interact with its surrounding environment*.
@@ -43,10 +39,6 @@ While the engine handles the core execution of the language, the runtime provide
 
 For instance, in a web browser, the JavaScript runtime includes the JavaScript engine, but also provides Web APIs (like the DOM, XMLHttpRequest, timers)
 
-
-
 ### The Difference
 
-JavaScript engine is the core component responsible for executing the language itself, while the JavaScript runtime environment provides the comprehensive set of tools and functionalities that enable JavaScript code to operate within a specific context, whether that be a web browser, a server, or another embedded environment.
-
-
+JavaScript engine is the core component responsible for **executing the language** itself, while the JavaScript runtime environment provides the comprehensive set of tools and functionalities that **enable JavaScript code to operate within a specific context**, whether that be a web browser, a server, or another embedded environment.
