--- a/NodeJS/Notes/3. Running Node.md
+++ b/NodeJS/Notes/3. Running Node.md
@@ -35,4 +35,4 @@ Gives access to setTimeout, setInterval
 > 
 > There were many ways to access the window object (this, self, window) this created conflict Hence , ES2020 standardize it to `globalThis`
 > 
->  In NodeJS, globalThis==global returns true
+>  In NodeJS, `globalThis==global` returns true
