--- a/NodeJS/Notes/4. Modules.md
+++ b/NodeJS/Notes/4. Modules.md
@@ -82,7 +82,7 @@ module.exports = {cal_sum,cal_product}
 
 > ##### `module.exports` v/s `exports`
 > 
-> When you assign a new value to `module.exports` (e.g., `module.exports = someValue;`), you are overwriting the original `module.exports` object. *Any previous additions to `exports` will be lost unless they were also explicitly assigned to `module.exports`.*
+> When you assign a new value to `module.exports` (e.g., `module.exports = someValue;`), *you are overwriting the original `module.exports` object. Any previous additions to `exports` will be lost unless they were also explicitly assigned to `module.exports`.*
 > 
 > When you add properties to `exports` (e.g., `exports.myFunction`), you are adding properties to the object that `exports`
 > 
@@ -107,6 +107,8 @@ console.log(math_operations.cal_sum(3,4))
 console.log(math_operations.cal_product(3.4))
 ```
 
+`.` accessor is used since all functions/variables are exported in an object. this is object is stored in `math_operations`
+
 You can destructor the functions/variables at `require()`
 
 ```js
@@ -117,7 +119,7 @@ The modules which use `require()` for importing and `module.exports` to export f
 
 ## ES Modules
 
-By default Common JS Modules are enabled to use ES Modules we need to enable them manually. ES Modules
+By default Common JS Modules are enabled in NodeJS,  to use ES Modules we need to enable them manually.
 
 ### Enabling ES Modules
 
@@ -155,7 +157,7 @@ import {cal_sum} from "path/to/Sum"
 
 Common JS are Synchronous , `require()` blocks the execution until all the code of the module is executed.
 
-ES Modules are asynchronous hey don't block the execution 
+ES Modules are asynchronous they don't block the execution of the code 
 
 Common JS works in `non-strict` mode and ES Modules works in `strict` mode.
 
@@ -163,7 +165,7 @@ Common JS works in `non-strict` mode and ES Modules works in `strict` mode.
 > 
 > Strict mode is a feature in JavaScript that was introduced in ECMAScript 5. It lets you write code in such a way that follows stricter rules.
 > 
-> This means you may be able to catch some common errors that would have otherwise gone unnoticed. It also helps you write cleaner and more secure code.
+> *This means you may be able to catch some common errors that would have otherwise gone unnoticed.* It also helps you write cleaner and more secure code.
 
 ## Nested Modules
 
@@ -171,7 +173,7 @@ Create a Folder and include a file `index.js`
 
 This file will `require()`  what all other files are exporting and this file will export them all.
 
-While using, just import from `index.js` to get all the functions/values form the folder.
+While using, just import from `folder` of `index.js` to get all the functions/values form the folder.
 
 ```js
 const {function, values} = require("path/to/folder")
@@ -234,3 +236,7 @@ Hence we got all the functions from package form a single import.
 ## Importing JSON Data
 
 use `require("path/to/json/file")` to get the json_data form the file and store it in a variable.
+
+## Importing NodeJS Internal/Built-In Modules
+
+use the `require()` with path being `"node:Module_name"` or just the module  `Module_name`
