Working of Threadpool

--- a/NodeJS/Notes/3. Running Node.md
+++ b/NodeJS/Notes/3. Running Node.md
@@ -17,7 +17,7 @@ The JS code is executed in the Node Runtime Environment
 
 ## Creating Our First File
 
-Create a file_name.js
+Create a `file_name.js`
 To run the code in the JS file : Run `node file_name` in terminal
 
 > JS code gets executed line by line since synchronous single threaded execution
