--- a/NodeJS/Notes/8. Working of EventLoop.md
+++ b/NodeJS/Notes/8. Working of EventLoop.md
@@ -20,7 +20,7 @@ Works as a cycle of Phases and in each phase is callbacks available it executes 
 > 
 > Event Loop simultaneously checks for idle state of Callstack and if found idle then only it pushes the callbacks according to the current phase. 
 > 
-> `EventLoop` executes callbacks waiting in the callback queue in respective phases. If a `respose of API` is waiting in Callback queue it will be executed(pushed on `CallStack`) when `EventLoop` traverses the `POLL` Phase 
+> `EventLoop` executes al the callbacks waiting in the callback queue of the respective phases. If a `respose of API` is waiting in Callback queue it will be executed(pushed on `CallStack`) when `EventLoop` traverses the `POLL` Phase 
 > 
 > After executing the callbacks they are removed from the callback queue.
 
@@ -50,15 +50,23 @@ Works as a cycle of Phases and in each phase is callbacks available it executes 
 
 Before going into any of the  above phases `EventLoop` will check for
 
-1. `process.nextTick()`
+1. `process.nextTick()` is checked for first and then
 
-2. and any callbacks of promises 
+2. any callbacks of promises 
 
 After checking these both the `EventLoop` enters into the Phase
 
 > Phase-X since I don't know it's name
 
 <img title="" src="../Diagrams/Flow of Event Loop Phases.png" alt="" data-align="right" width="638">
+
+`EventLoop` will move on the next only after execution all the callbacks from the queue of the current phase i.e., until current phase queue becomes empty.
+
+
+
+One Cycle of `EventLoop` is known as `Tick`
+
+
 
 Example 
 
@@ -112,7 +120,7 @@ Flow of `EventLoop`
 
 - `Eventloop` checks for `PHASE-X` not found go to `PHASE-poll`
 
-- Found a I/O callback from reading operation executes it and logs `"File Reading CB"`
+- Found a I/O callback from reading operation executes it and logs `"File Reading CB"` 
   
   ```bash
   // Final Output
@@ -143,3 +151,16 @@ Flow of `EventLoop`
           ▼
    "File Reading CB"
   ```
+
+If All Queue's are empty then `EventLoop` will waits at `PHASE-POLL`
+
+When `EventLoop` is idle it waits at `PHASE-POLL` so as to execute any I/O callbacks as soon as there are received. Hence NodeJS `EventLoop` is known as semi infinite loop.
+
+> Browser `EventLoop` does not waits t keeps on running.
+
+
+
+##### Additional Phases
+
+- **pending callbacks**: executes I/O callbacks deferred to the next loop iteration. This phase executes callbacks for some system operations such as types of TCP errors.
+- **idle, prepare**: only used internally.
