Connected NodeJS to MongoDB
- Visualized Tick of libUV Event Loop
 - MongoClient
- connection pool and string

--- a/NodeJS/Notes/8. Working of EventLoop.md
+++ b/NodeJS/Notes/8. Working of EventLoop.md
@@ -62,11 +62,7 @@ After checking these both the `EventLoop` enters into the Phase
 
 `EventLoop` will move on the next only after execution all the callbacks from the queue of the current phase i.e., until current phase queue becomes empty.
 
-
-
 One Cycle of `EventLoop` is known as `Tick`
-
-
 
 Example 
 
@@ -154,11 +150,11 @@ Flow of `EventLoop`
 
 If All Queue's are empty then `EventLoop` will waits at `PHASE-POLL`
 
+![](..\Diagrams\Cycle%20of%20EventLoop.png)
+
 When `EventLoop` is idle it waits at `PHASE-POLL` so as to execute any I/O callbacks as soon as there are received. Hence NodeJS `EventLoop` is known as semi infinite loop.
 
-> Browser `EventLoop` does not waits t keeps on running.
-
-
+> Browser `EventLoop` does not waits it keeps on running.
 
 ##### Additional Phases
 
