Express Middleware and Error Handling
-next and err parameters
- middleware chaining
-execution flow of routes

--- a/NodeJS/Notes/13 Builing Industry Grade Projects/3. Creating Express Server.md
+++ b/NodeJS/Notes/13 Builing Industry Grade Projects/3. Creating Express Server.md
@@ -11,8 +11,27 @@ We create server to listen to our project requests.
 1. Require exprees
 
 2. Create an app instance of `express()`
+   
+   1. > - `app` from `express()` is just a function (the same shape Node expects).
+      > 
+      > - `console.log(app)` => [Function: app] 
+      > 
+      > - Because of that, you can plug it into **any server (HTTP or HTTPS)** easily. i.e can be used as a callback
 
 3. Start listening to the instance  using `listen()` , this can have a callback which is executed on successful running of the server.
+   
+   1. > `.listen(port)`
+      > 
+      > Binds and listens for connections(of the requests) on the specified host(domain) and port. 
+      > 
+      > If port is omitted or is 0, the operating system will assign an arbitrary unused port.
+      > 
+      > The `app.listen()` method returns an http server object
+      > - Put **all your routes, middleware, configs** first.
+      > 
+      > - Call `.listen()` at the very **end of your entry file** (e.g., `server.js` or `index.js`).
+      > 
+      > - This way all middleware, routes, configs registered **before** the server starts accepting requests.
 
 ```js
 const express = require("express")
@@ -23,6 +42,18 @@ app.listen(5000, ()=>{
     console.log("Server Successfully listening on PORT 5000")
 });
 ```
+
+## Why Express when we have node:server
+
+| Feature                | Node.js `http.Server` (built-in)                     | Express.js (framework)                                             |
+| ---------------------- | ---------------------------------------------------- | ------------------------------------------------------------------ |
+| **Routing**            | Manual: `if (req.url === "/user")`                   | Built-in: `app.get("/user", ...)`                                  |
+| **Request parsing**    | Raw `req` stream (manual parsing of body/query)      | `req.body`, `req.query` ready (via middleware)                     |
+| **Response handling**  | `res.writeHead()`, `res.end()`                       | `res.send()`, `res.json()`, `res.status()` helpers                 |
+| **Middleware support** | *Not built-in (you must implement)*                  | *Built-in `app.use()` + `next()` pipeline*                         |
+| **Ecosystem**          | Very limited (you build from scratch)                | Huge ecosystem of middleware (auth, logging, sessions, validation) |
+| **Learning curve**     | Low-level, verbose                                   | High-level, developer-friendly                                     |
+| **Use case**           | Fine for tiny servers, custom protocols, or learning | Best for APIs, web apps, production projects                       |
 
 ### Handling Incoming Requests
 
@@ -131,8 +162,36 @@ Routes are matched from top to bottom , if a path match found the bottom routes 
 > > 
 > > Tis returns the expected output of `I'm Dev 2`
 
-
-
 > `NOTE`
 > 
 > Every route should give a response (`res.send()`) failing to do so cause an infinite request. The request will hang.
+
+
+
+> `.use([path],[callbacks])`
+> 
+> Mounts the specified middleware function or functions at the specified path
+> 
+> Mounting is the process Attaching a middleware (or router) function to a specific path in the app, so that **any request matching that path will pass through it**.
+> 
+> 1. The path for which the middleware function is invoked. It can be any of the following:
+>    
+>    - A string representing a path.
+>    - A path pattern.
+>    - A regular expression pattern to match paths.
+>    - An array containing any combination of the above.
+> 
+> 2. One or more callback functions. Accepted formats:
+>    
+>    - A single middleware function.
+>    - Multiple middleware functions separated by commas.
+>    - An array of middleware functions.
+>    - A combination of the above
+
+### Status Codes
+
+If a routes needs to return a Status code
+
+```js
+res.status(code).send(response) 
+```
