--- a/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
+++ b/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
@@ -36,16 +36,77 @@ To explicitly match a route for a required method call use `.<method_name>`
 
 5. `/regExp/` Regular Expressions: matches for the pattersn matching `regExp`
 
-
-
 ## Getting the query_parameters from the route
 
 use `req.query` to get all the query_parameters from the route_url  
-
-
 
 ## Dynamic Routes
 
 use `"/:param"` to the route this match path, to get this params use `req.params`
 
+## Multiple Route Handlers For a Single Route
 
+```js
+app.use("/route" ,
+(req,res,next) => {
+    console.log("Route Handler-1")
+    next()
+},
+(req,res) ()=>{
+    console.log("Router Handler -2")
+}
+
+)
+```
+
+We use `next()` to pass execution/calls to next Route Handler. Specify `next` with the parameters of Callback
+
+>  `NOTE`
+> 
+> A route handler cannot have both `res.send()` and `next()`
+> 
+> If there is no route handler to execute for `next()` call an Error will be thrown.
+
+You can wrap the route Handlers with an `Array` it upon you to wrap all the Route handlers or some specific one.
+
+```js
+app.use("/route" ,
+[
+    (req,res,next) => {
+        console.log("Route Handler-1")
+        next()
+    },
+    (req,res) ()=>{
+        console.log("Router Handler -2")
+    },
+
+    [
+        (req,res,next) => {
+            console.log("Route Handler-3")
+            next()
+        },
+        (req,res) ()=>{
+           console.log("Router Handler -4")
+        }
+
+    ]
+
+
+]
+
+)
+```
+
+You can just separate Router handler with the same route. and connect them with an `next()` call
+
+```js
+app.use("/form", (req,res,next)=>{
+    console.log("Frontend Submitted the form");
+    next();
+})
+
+app.use("/form", (req,res)=>{
+    console.log("Processed and Stored the Form Data")
+    res.send("Form Successfully submitted")
+}) 
+```
