Read Express Docs on
- app.use()
- res.send and res.status
- req.params and req.query

--- a/NodeJS/Notes/13 Builing Industry Grade Projects/3. Creating Express Server.md
+++ b/NodeJS/Notes/13 Builing Industry Grade Projects/3. Creating Express Server.md
@@ -6,9 +6,9 @@ We create server to listen to our project requests.
 
 > `TIP`
 > 
-> Always use `^` for packages so that we can use the fixed bugs and preserving the backward compatbility.
+> Always use `^` for packages so that we can use the fixed bugs and preserving the backward compatibility.
 
-1. Require exprees
+1. Require express
 
 2. Create an app instance of `express()`
    
@@ -188,6 +188,38 @@ Routes are matched from top to bottom , if a path match found the bottom routes 
 >    - An array of middleware functions.
 >    - A combination of the above
 
+
+
+> `app.use()` v/s `app.all()`
+> 
+> `app.use()` matches any URL that starts with the specified path.
+> 
+> `app.all()` Used to define a route handler that responds to all HTTP methods (GET, POST, PUT, DELETE, etc.) for a specific path.
+
+
+
+
+
+>  `res.send([body])`
+> 
+> when a request comes in, **you must send an HTTP response** back to the client.
+> 
+> The `body` parameter can be a `Buffer` object, a `String`, an object, `Boolean`, or an `Array`.
+> 
+> Automatically assigns the `Content-type` header based on type of data body has.
+> 
+> **Why can't I just `return` response form the Route Handler?**
+> 
+> Express route handlers are not normal functions returning values — they are **callbacks run by the HTTP server**.
+> 
+> - `res.send()` writes the HTTP response and ends it.
+> 
+> - This is what actually travels over the network back to the browser/client.
+> 
+> - Without it, the client would just keep **waiting forever**
+
+### 
+
 ### Status Codes
 
 If a routes needs to return a Status code
@@ -195,3 +227,13 @@ If a routes needs to return a Status code
 ```js
 res.status(code).send(response) 
 ```
+
+ **res.status(code)** Sets the HTTP status for the response.
+
+> `req.body`
+> 
+> Contains key-value pairs of data submitted in the request body. By default, it is `undefined`
+> 
+> > `NOTE`
+> > 
+> > As `req.body`’s shape is based on user-controlled input, all properties and values in this object are untrusted and should be validated before trusting.
