--- a/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
+++ b/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
@@ -40,9 +40,33 @@ To explicitly match a route for a required method call use `.<method_name>`
 
 use `req.query` to get all the query_parameters from the route_url  
 
+> `req.query`
+> 
+> This property is an object containing a property for each query string parameter in the route.
+> 
+> Query String Parameters are key-value pairs appended to the end of a Uniform Resource Locator (URL) following a question mark (`?`).
+> 
+> These parameters are used to pass data or instructions to a web server when requesting a resource.
+> 
+> - **Start:** A question mark (`?`) indicates the beginning of the query string.
+> - **Key-Value Pairs:** Each parameter consists of a key and a corresponding value, separated by an equals sign (`=`).
+> - **Separation:** Multiple parameters within a single query string are separated by an ampersand (`&`).
+> 
+> > `NOTE`
+> > 
+> > As `req.query`’s shape is based on user-controlled input, all properties and values in this object are untrusted and should be validated before trusting.
+
 ## Dynamic Routes
 
 use `"/:param"` to the route this match path, to get this params use `req.params`
+
+
+
+> `req.params`
+> 
+> This property is an object containing properties mapped to the named route “parameters”. For example, if you have the route `/user/:name`, then the “name” property is available as `req.params.name`. This object defaults to `{}`.
+> 
+> Route parameters are named URL segments that are used to capture the values specified at their position in the URL.
 
 ## Multiple Route Handlers For a Single Route
 
