CRUD using Mongoose
- CRUD on Documets by creating respective routes
- Used expres.json() to parse josn body of the request

--- a/NodeJS/Notes/15. Working with MongoDB.md
+++ b/NodeJS/Notes/15. Working with MongoDB.md
@@ -22,7 +22,7 @@ Most used to medium to connect with mongoDB
    > 
    > ### If you have to use symbols
    > 
-   > A connection string is essentially a URL, and it follows the standard URL format:
+   > A connection string is essentially a URI, and it follows the standard URI format:
    > 
    > `protocol://<username>:<password>@<hostname>:<port>/<database>?<options>`
    > 
@@ -166,10 +166,183 @@ We create a `POST` API which adds the `Document` to the Instance of the model cr
 
 
 
-> `TIP`
+> `NOTE`
 > 
-> Always wrap DB operations in `try-catch`
+> Use await with DB operations and Always wrap  them in  `try-catch`
 
 
 
 ### Writing Dynamic(user_input) data to the Database
+
+We need to pass the required data to server, it will then add it to the DB.
+
+To do this pass the dynamic data as `body` of the `request` 
+
+#### Making Request with Custom Data
+
+1. Go to Postman and select the api 
+
+2. Select `body` and select `raw`
+   
+   1.  In raw select `JSON`
+
+Make the `request` with required data placed in the `body` of the `request`
+
+
+
+#### Getting Custom Data from the request
+
+use `req.body` to get data containing in the `body` of the `request`
+
+This returns `undefined` since our Server cannot parse the `JSON`
+
+Hence we need to use a Middleware to read the JSON . Express provides a built-in middleware for this purpose `express.json()`
+
+##### Adding JSON Middleware
+
+Create a route using `app.use()` and directly pass the method `express.json()` into it.
+
+```js
+app.use(express.json())
+```
+
+This will be called on every request the server receives since `.use()` without a route gets called on every path.
+
+Place it on top of all routes so that it would be accessible to every route below it.
+
+`exprees.json()` will convert the JSON into JS Object and assigns the JS object to the request's body.
+
+
+
+Now using `req.body` does not returns `undefined`
+
+```js
+app.use(express.json())
+
+app.post("/addUser", async (req,res)=>{
+    try{
+        const new_user = new User(req.body)
+        new_user.save()
+        res.status(200).send("user Sucesfully added to the DB")
+        
+    } catch(e){
+        console.log("Error adding user", e)
+        res.status(500).send("Error adding user to the database.")
+    }
+
+})
+```
+
+
+
+## Reading from Database
+
+use `GET` API and decide the Model we need to Query on. 
+
+Call the `.find()` method on the Model specify the filter inside the function.
+
+filter syntax : a JS Object for the properties and the value querying for
+
+`{filerProperty :  requiredValue}` 
+
+> `TIP`
+> 
+> To get all the documents of the model , keep the filter as an empty object `{}`
+
+`.find()` returns a array of documents which satisfies the filter. 
+
+
+
+```js
+app.get("/getUser", async (req,res)=>{
+    const requested_name = req.body.name;
+    console.log(requested_name);
+    
+    try {
+        const user_found = await User.find({
+            "lastName":requested_name
+        })
+        if(user_found.length ===0){
+            res.status(404).send("User Not Found")
+        }
+        else{
+            res.send(found)
+        }
+        
+    } catch (error) {
+        res.status(400).send("Something Went Wrong")
+    }
+})
+```
+
+
+
+
+
+## Deleting form the Model
+
+use `DELETE` API and select the document to be delete using the `_id` field
+
+use `.findOneAndDelete(filter)` for deleting with a custom property., if deleting using the `_id` then use `findByIdAndDelete(id)`
+
+> Pass the `_id` in the `body` of the `request`
+
+```js
+app.delete("/deleteUser", async (req,res)=>{
+    const deleteID = req.body.id;
+    try{
+        const deleteUser = await User.findByIdAndDelete(deleteID);
+        res.status(200).send("User deleted")
+    }catch (error) {
+        res.status(400).send("Something Went Wrong")
+    }
+    
+})
+```
+
+
+
+## Updating A Document
+
+use `PATCH` API to make a request and use the methods `findByIdAndUpdate(id,updater)` and
+
+`.findOneAndUpdate(filter, updater)` 
+
+updater is an `obj` which contains the fields to update and their new values
+
+```js
+Model.findOneAndUpdate({filter:value}, {
+    fieldToUpdate:newValue,
+    fieldToUpdate:newValue,
+}, {options})
+```
+
+options include various functionalities use 
+
+1. `returnDocument:"before"` option to get the Document before Updating
+
+2. `returnDocument:"after"` option to get the Document after the Update.
+
+
+
+> `NOTE`
+> 
+> Update functions do not add the files if they don't exist.
+
+```js
+app.patch("/updateUser", async (req,res)=>{
+    const updates = req.body
+    try{
+        const updatedDocument = await User.findByIdAndUpdate(updates.id, {
+            "firstName":updates.firstName,
+             "mail":updates.mail
+        },{returnDocument:"after"})
+        res.status(300).send("Successfully updated Doc")    
+    }
+    catch(e){
+        console.log(e)
+        
+        res.status(400).send("Something Went Wrong")
+    }
+})
+```
