--- a/NodeJS/Notes/14. REST APIs.md
+++ b/NodeJS/Notes/14. REST APIs.md
@@ -197,6 +197,46 @@ But , Since resource is gone from server for every request the state is same hen
 > 
 > 5. **DELETE**: ✅ Idempotent (once deleted, further deletes don’t change anything).
 
+
+
+> **If I could Perform any Operation in the Route Why Use REST Methods for Specific Tasks?**
+> 
+> While you technically *can* do anything in any route, you *shouldn't*. Adhering to RESTful conventions makes your API predictable, reliable, and able to seamlessly integrate with the vast ecosystem of web tools and infrastructure.
+
+
+
+## HTTP Status Codes
+
+Common HTTP Methods and Associated Status Codes:
+
+1. GET (Retrieve a resource)
+- **200 OK:** The request was successful, and the requested resource is returned.
+- **404 Not Found:** The requested resource does not exist.
+- **401 Unauthorized:** The request requires user authentication.
+- **403 Forbidden:** The server understood the request but refuses to authorize it. 
+2. POST (Create a new resource) 
+- **201 Created:** The request was successful, and a new resource was created. The response typically includes the location of the newly created resource.
+- **400 Bad Request:** The request body or parameters are invalid.
+- **409 Conflict:** An attempt was made to create a resource that already exists.
+3. PUT (Update an existing resource or create if it doesn't exist)
+- **200 OK:** The resource was successfully updated.
+- **201 Created:** The resource did not exist and was successfully created.
+- **204 No Content:** The resource was successfully updated, but the server is not returning any content in the response body.
+- **400 Bad Request:** The request body or parameters are invalid.
+- **404 Not Found:** The resource to be updated does not exist.
+4. DELETE (Remove a resource)
+- **200 OK:** The resource was successfully deleted.
+- **204 No Content:** The resource was successfully deleted, and no content is returned.
+- **404 Not Found:** The resource to be deleted does not exist.
+
+Other Important Status Codes:
+
+- **301 Moved Permanently:** The requested resource has been permanently moved to a new URL.
+- **304 Not Modified:** Used for caching; indicates the resource has not been modified since the last request.
+- **405 Method Not Allowed:** The HTTP method used is not allowed for the requested resource. 
+- **500 Internal Server Error:** A generic error indicating an unexpected condition on the server.
+- **503 Service Unavailable:** The server is currently unable to handle the request due to temporary overload or maintenance.
+
 ## Best Practices For RESTAPI
 
 
