Validating API and Hashing Passwords

--- a/NodeJS/Notes/15. Working with MongoDB.md
+++ b/NodeJS/Notes/15. Working with MongoDB.md
@@ -138,6 +138,20 @@ const User = mongoose.model("User",userSchema)
 module.exports = User;
 ```
 
+> **Tracking TimeStamps**
+> 
+> MongoDB provides the feature to insert timestamps for when document was created and when it was updated. Just add `timestamp: true` into the Schema options.(Separate object after the schema fields)
+> 
+> ```js
+> const userSchema = new mongoose.Schema({
+>    // All Fields
+> }, {
+>     timestamps:true
+> })
+> ```
+> 
+> To enable timestamps after update we need to enable them in the updating functions by setting option 
+
 ## Writing Data into Collection with Routes
 
 We create a `POST` API which adds the `Document` to the Instance of the model created above section.(User)
@@ -164,13 +178,9 @@ We create a `POST` API which adds the `Document` to the Instance of the model cr
 > 
 > `__v` are the version control of the document.
 
-
-
 > `NOTE`
 > 
 > Use await with DB operations and Always wrap  them in  `try-catch`
-
-
 
 ### Writing Dynamic(user_input) data to the Database
 
@@ -184,11 +194,9 @@ To do this pass the dynamic data as `body` of the `request`
 
 2. Select `body` and select `raw`
    
-   1.  In raw select `JSON`
+   1. In raw select `JSON`
 
 Make the `request` with required data placed in the `body` of the `request`
-
-
 
 #### Getting Custom Data from the request
 
@@ -212,8 +220,6 @@ Place it on top of all routes so that it would be accessible to every route belo
 
 `exprees.json()` will convert the JSON into JS Object and assigns the JS object to the request's body.
 
-
-
 Now using `req.body` does not returns `undefined`
 
 ```js
@@ -224,7 +230,7 @@ app.post("/addUser", async (req,res)=>{
         const new_user = new User(req.body)
         new_user.save()
         res.status(200).send("user Sucesfully added to the DB")
-        
+
     } catch(e){
         console.log("Error adding user", e)
         res.status(500).send("Error adding user to the database.")
@@ -232,8 +238,6 @@ app.post("/addUser", async (req,res)=>{
 
 })
 ```
-
-
 
 ## Reading from Database
 
@@ -251,13 +255,11 @@ filter syntax : a JS Object for the properties and the value querying for
 
 `.find()` returns a array of documents which satisfies the filter. 
 
-
-
 ```js
 app.get("/getUser", async (req,res)=>{
     const requested_name = req.body.name;
     console.log(requested_name);
-    
+
     try {
         const user_found = await User.find({
             "lastName":requested_name
@@ -268,16 +270,12 @@ app.get("/getUser", async (req,res)=>{
         else{
             res.send(found)
         }
-        
+
     } catch (error) {
         res.status(400).send("Something Went Wrong")
     }
 })
 ```
-
-
-
-
 
 ## Deleting form the Model
 
@@ -296,11 +294,9 @@ app.delete("/deleteUser", async (req,res)=>{
     }catch (error) {
         res.status(400).send("Something Went Wrong")
     }
-    
+
 })
 ```
-
-
 
 ## Updating A Document
 
@@ -323,8 +319,6 @@ options include various functionalities use
 
 2. `returnDocument:"after"` option to get the Document after the Update.
 
-
-
 > `NOTE`
 > 
 > Update functions do not add the files if they don't exist.
@@ -341,7 +335,7 @@ app.patch("/updateUser", async (req,res)=>{
     }
     catch(e){
         console.log(e)
-        
+
         res.status(400).send("Something Went Wrong")
     }
 })
