JWT Tokens , Auth Middleware ad Swagger Report
- created tokens and cookies
- created an auth middleware
- Generated Interactive API report using Swagger UI

--- a/NodeJS/Notes/15. Working with MongoDB.md
+++ b/NodeJS/Notes/15. Working with MongoDB.md
@@ -152,6 +152,28 @@ module.exports = User;
 > 
 > To enable timestamps after update we need to enable them in the updating functions by setting option 
 
+> **Custom Schema Methods**
+> 
+> Create helper/utiliy functions which needs to works with documents the Model of the above schema stores.
+> 
+> use `schema.methods.function_name` to perform any operations on the documents
+> 
+> > `NOTE`
+> > 
+> > Always make sure these functions **are not arrow functions** Since we access the required document as an instance of the Model we use `this` to get the current instance(Document).
+> 
+> ```js
+> userSchema.methods.generateJWT = async function(){
+>     const user = this;
+>     const id = user._id;
+> 
+>     const token = await jwt.sign({id:id},
+>         "learningNodeJS", 
+>         {expiresIn: "7d"})
+>     return token;
+> }
+> ```
+
 ## Writing Data into Collection with Routes
 
 We create a `POST` API which adds the `Document` to the Instance of the model created above section.(User)
